--- a/sw/templates/base_hq_8_4.html
+++ b/sw/templates/base_hq_8_4.html
@@ -13,8 +13,8 @@
     {% breadcrumb_url_css "icon-link sw-link" 'HQ' dashboard_index %}
 {% endblock %}
 
-{% block auth_bar_left %}
-{% include "base/hq_auth_bar_left.html" %}
+{% block user_bar_left %}
+{% include "base/hq_user_bar_left.html" %}
 {% endblock %}
 
 {% block site_sections %}
