--- a/sw/templates/idios/profiles.html
+++ b/sw/templates/idios/profiles.html
@@ -7,7 +7,7 @@
 
 {% block breadcrumbs %}
     {{ block.super }}
-    {% breadcrumb 'All Profiles' %}
+    {% breadcrumb_css 'icon-link vcard-link' 'All Profiles' %}
 {% endblock %}
 
 
