--- a/sw/templates/account/base.html
+++ b/sw/templates/account/base.html
@@ -4,7 +4,9 @@
 
 {% block breadcrumbs %}
     {{ block.super }}
-    {% breadcrumb 'Accounts' %}
+    {% if user.is_authenticated %}
+        {% breadcrumb_url_css "icon-link vcard-link" user.get_profile profile_detail username=user.username %}
+    {% endif %}
 {% endblock %}
 
 {% block page_title %}{% block head_title %}{% endblock %}{% endblock %}
