--- a/sw/templates/account/email.html
+++ b/sw/templates/account/email.html
@@ -8,7 +8,7 @@
 
 {% block breadcrumbs %}
     {{ block.super }}
-    {% breadcrumb 'Email Addresses' %}
+    {% breadcrumb_css 'icon-link email_edit-link' 'Email Addresses' './' %}
 {% endblock %}
 
 {% block body %}
