--- a/sw/templates/account/logout.html
+++ b/sw/templates/account/logout.html
@@ -7,7 +7,7 @@
 
 {% block breadcrumbs %}
     {{ block.super }}
-    {% breadcrumb 'Sign Out' %}
+    {% breadcrumb_css 'icon-link door_in-link' 'Sign Out' %}
 {% endblock %}
 
 {% block body %}
