--- a/sw/templates/account/password_change.html
+++ b/sw/templates/account/password_change.html
@@ -8,7 +8,7 @@
 
 {% block breadcrumbs %}
     {{ block.super }}
-    {% breadcrumb 'Change Password' %}
+    {% breadcrumb_css 'icon-link key-link' 'Change Password' './' %}
 {% endblock %}
 
 {% block body %}
