--- a/sw/templates/account/password_reset.html
+++ b/sw/templates/account/password_reset.html
@@ -9,7 +9,7 @@
 
 {% block breadcrumbs %}
     {{ block.super }}
-    {% breadcrumb 'Password Reset' %}
+    {% breadcrumb_css "icon-link key-link" 'Password Reset' %}
 {% endblock %}
 
 {% block body %}
