--- a/sw/templates/socialaccount/connections.html
+++ b/sw/templates/socialaccount/connections.html
@@ -7,7 +7,7 @@
 
 {% block breadcrumbs %}
     {{ block.super }}
-    {% breadcrumb 'Third-party Connections' %}
+    {% breadcrumb_css "icon-link plugin_edit-link" 'Third-party Connections' './' %}
 {% endblock %}
 
 {% block body %}
