--- a/sw/media/css/base.scss
+++ b/sw/media/css/base.scss
@@ -48,9 +48,12 @@ $color-c: #e64d00;
 @include icon-link-image("folder");
 @include icon-link-image("group");
 @include icon-link-image("group_link");
+@include icon-link-image("key");
 @include icon-link-image("lightning");
 @include icon-link-image("page");
 @include icon-link-image("pencil");
+@include icon-link-image("plugin");
+@include icon-link-image("plugin_edit");
 @include icon-link-image("sw");
 @include icon-link-image("user_go");
 @include icon-link-image("user_green");
