--- a/sw/templates/site_messages.html
+++ b/sw/templates/site_messages.html
@@ -1,6 +1,6 @@
 {% block messages %}
     {% if messages or 1 %}
-    	<ul id="site-messages">
+    	<ul id="site-messages" class="prefix_3 grid_6 suffix_3">
         	{% for message in messages %}
         		<li>{{ message }}</li>
         	{% endfor %}
