--- a/sw/templates/base.html
+++ b/sw/templates/base.html
@@ -18,7 +18,7 @@
 
     {# Base #}
     <!--[if !IE 6]><!-->
-    <link href="{{ STATIC_URL }}css/base.css?2010121903" rel="stylesheet">
+    <link href="{{ STATIC_URL }}css/base.css?2010121904" rel="stylesheet">
     <!--<![endif]-->
 
     <!--[if IE 7]>
@@ -73,6 +73,8 @@
         {% endif %}
     {% endspaceless %}</span>
 </div>
+
+{% include "site_messages.html" %}
 
 {% block header %}
 <div class="header grid_12 alpha omega">
