--- a/sw/templates/sw/cms_page_preamble.html
+++ b/sw/templates/sw/cms_page_preamble.html
@@ -1,7 +1,7 @@
 <div class="beta-annotation grid_8 alpha omega prefix_2 suffix_2">
     <p>
         You are viewing a page as it will be presented to the general public.
-        Visit the <a href="{% url teams_team slug='webcontent' %}">Web Content team</a> for more
+        Visit the <a href="{% url teams_team_index slug='webcontent' %}">Web Content team</a> for more
         information.
     </p>
 </div>
