--- a/sw/templates/teams/index.html
+++ b/sw/templates/teams/index.html
@@ -18,17 +18,75 @@
 
     {% wikipagesnippet AllTeamsListPreamble latest %}
 
-    <div class="team-tree">
-        {% for tree_item in team_tree %}
-            {% if tree_item == 'li' %}<li>{% endif %}
-            {% if tree_item == '/li' %}</li>{% endif %}
-            {% if tree_item == 'ul' %}<ul>{% endif %}
-            {% if tree_item == '/ul' %}</ul>{% endif %}
-            {% if tree_item.slug %}
-                <a href="{% url teams_team slug=tree_item.slug %}">{{ tree_item.name }}</a>
+    {% with request.GET.update_memberships as update_memberships %}
+        {% if update_memberships == '1' %}
+            <p>Click on a team below to join or leave it.  Be sure to save
+            changes when you're done.</p>
+        {% else %}
+            <p>Click on a team below to visit it.  <strong>Boldface</strong> indicates teams you
+            have joined.<p>
+
+            <p><a href="?update_memberships=1">Manage your team memberships here</a>.</p>
+        {% endif %}
+
+        <form action="{% url teams_membership %}" method="POST" accept-charset="utf-8">
+            {% csrf_token %}
+
+            {% if update_memberships == '1' %}
+                <p><input type="submit" name="save_changes" value="Save Changes">
+                or
+                <a href="?update_memberships=0">Cancel</a></p>
             {% endif %}
-        {% endfor %}
-    </div>
+
+            <div class="team-tree">
+                {% for tree_item in team_tree %}
+                    {% if tree_item == 'li' %}<li>{% endif %}
+                    {% if tree_item == '/li' %}</li>{% endif %}
+                    {% if tree_item == 'ul' %}<ul>{% endif %}
+                    {% if tree_item == '/ul' %}</ul>{% endif %}
+                    {% if tree_item.slug %}
+                        {% with tree_item as team %}
+                            {% if update_memberships == '1' %}
+                                {% if team in teams_user_is.member_of %}
+                                    {% if team in teams_user_is.coordinator_of %}
+                                        <input type="checkbox" checked disabled>
+                                        <input type="hidden" name="team_{{ team.id }}" value="1">
+                                    {% else %}
+                                        <input type="checkbox" name="team_{{ team.id }}" id="team_{{ team.id }}" checked>
+                                    {% endif %}
+                                {% else %}
+                                    {% if team.is_private %}
+                                        <input type="checkbox" name="team_{{ team.id }}" id="team_{{ team.id }}" disabled>
+                                    {% else %}
+                                        <input type="checkbox" name="team_{{ team.id }}" id="team_{{ team.id }}">
+                                    {% endif %}
+                                {% endif %}
+                                <label for="team_{{ team.id }}">{{ team.name }}</label>
+                            {% else %}
+                                {% if team in teams_user_is.member_of %}
+                                    <strong><a href="{% url teams_team_index slug=team.slug %}">{{ team.name }}</a></strong>
+                                {% else %}
+                                    <a href="{% url teams_team_index slug=team.slug %}">{{ team.name }}</a>
+                                {% endif %}
+                            {% endif %}
+                            {% if team.is_private %}
+                                &mdash; invitation-only
+                            {% endif %}
+                            {% if team in teams_user_is.coordinator_of %}
+                                &mdash; you are a coordinator
+                            {% endif %}
+                        {% endwith %}
+                    {% endif %}
+                {% endfor %}
+            </div>
+
+            {% if update_memberships == '1' %}
+                <p><input type="submit" name="save_changes" value="Save Changes">
+                or
+                <a href="?update_memberships=0">Cancel</a></p>
+            {% endif %}
+        </form>
+    {% endwith %}
 
 {% endblock %}
 
