--- a/sw/templates/activity/action.html
+++ b/sw/templates/activity/action.html
@@ -28,7 +28,8 @@
         {% if target and not group %}
             in
             <span class="target">
-                {% if target.get_absolute_url %}
+                {# @@@: Assumes targets are always teams. #}
+                {% if target.slug %}
                     <a href="{{ target.get_absolute_url }}">{{ target }}</a>
                 {% else %}
                     {{ target }}
